--- a/app/assets/stylesheets/components/personality.scss
+++ b/app/assets/stylesheets/components/personality.scss
@@ -36,3 +36,8 @@
     border: none;
     outline: none; 
 }
+
+.personality-title {
+    margin: 0px;
+    margin-left: 20px;
+}
